refactor: wip update 7